fix scrollbars and weird height

--- a/style.css
+++ b/style.css
@@ -197,7 +197,6 @@ button:hover {
     position: relative;
     min-width: 200px;
     width: 80%;
-    max-height: 400px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -299,9 +298,7 @@ button:hover {
     }
 
     .lp1 .container-bio {
-        max-height: 50%;
         min-width: 200px;
-        overflow: scroll;
     }
 
     .lp1 .container-latestproject {
@@ -311,9 +308,7 @@ button:hover {
     }
 
     .lp3 .container {
-        max-height: 50%;
         min-width: 200px;
-        overflow: scroll;
     }
 }
 
